# cm2024

./: CMakeLists.txt  DatMessage.cpp  DatMessage.hpp  README.md  README.txt  cm2024-template.ods  cm2024.kdev4  datmessage.cpp  datmessage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  supmessage.cpp  supmessage.h  usbworker.cpp  usbworker.h
.kdev4/: cm2024.kdev4
